--- a/package.json
+++ b/package.json
@@ -4,6 +4,9 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
+   "predeploy": "npm run build",
+   "deploy": "gh-pages -d build",
+    "build": "react-scripts build"
     "dev": "vite",
     "build": "vite build --outDir docs/",
     "lint": "eslint .",
